--- a/example/styles.css
+++ b/example/styles.css
@@ -1,3 +1,23 @@
+/* Page */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+html, body, #root {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* Syntax highlighting */
 .token.comment,
 .token.prolog,
 .token.doctype,
