--- a/example/styles.css
+++ b/example/styles.css
@@ -3,18 +3,60 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-html, body {
+html,
+body,
+#root {
   height: 100%;
   width: 100%;
 }
 
 body {
+  font-family: 'Fira code', Consolas, Menlo, Courier, monospace;
+  font-size: 14px;
+  line-height: 1.5;
   margin: 0;
   padding: 0;
+}
+
+/* App */
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.container__content {
+  width: 420px;
+  max-width: 100%;
+  text-align: center;
+}
+
+.container__editor {
+  font-size: 12px;
+  font-variant-ligatures: 'common-ligatures';
+  background-color: #fafafa;
+  border-radius: 3px;
+  margin: 1.67em 0;
+}
+
+.button {
+  display: inline-block;
+  padding: 0 6px;
+  text-decoration: none;
+  background: #000;
+  color: #fff;
+}
+
+.button:hover {
+  background: linear-gradient(45deg, #E42B66, #E2433F);
 }
 
 /* Syntax highlighting */
